welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: Missing closing brace `}' assumed here
} 
^